// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RewardsPointsTable Component should render correctly 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text="$0"
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text="My Rewards"
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text={10}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text="Current Points"
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text={90}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text="Points to Next Reward"
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;

exports[`RewardsPointsTable Component should render correctly with values 1`] = `
<Styled(View)>
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text="0"
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text=""
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text={10}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text="Current Points"
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
  <Styled(View) />
  <Styled(View)>
    <Styled(BodyCopy)
      color="gray.900"
      fontFamily="secondary"
      fontSize="fs18"
      fontWeight="black"
      locator=""
      text={90}
    />
    <Styled(View)>
      <Styled(BodyCopy)
        color="black"
        fontFamily="secondary"
        fontSize="fs13"
        fontWeight="regular"
        locator=""
        text="Points to Next Reward"
        textAlign="center"
      />
    </Styled(View)>
  </Styled(View)>
</Styled(View)>
`;
